@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST HTML-Tree-4.2.tar.gz 155774 SHA256 80e4e3caa5e0e025dee5ed383a8d4cc7479ae4802184c4757dafd147a8fca7c9 SHA512 493e04fa5ab9ea23b6ca3d9a4a1c96a4679fb2e99ca42bdd0de8f1ca5196fd83af69852a2d5dee2a2842b46193b875df2afbbd3aaf8aef981ea51bce8c4e42b8 WHIRLPOOL a78b18f36ad4f2a8af8c222d7ea5ec129c432213225fe7b444501496bb6ff290e093eb497062329155e8778fb55eb1badabcd9c1dc8a38272c0034a6b56d827d
 DIST HTML-Tree-5.02.tar.gz 147057 SHA256 2178276e09b6f057905b89e0a6076385de6ef53fdf6f573edf3011b2d8febef7 SHA512 ebb4633aff34cab33a7062f9971fca9f5461b4ba73414abcfa28c8cdb0076e0b7d8107d427493d74b337217a9bcdfa7a6fad810263b253ccc6414721dffec8cc WHIRLPOOL b60e0e822d2b7833559bb36ab1f5f08b415735398b374c2b9f43e98740794d3899b7bfbda0a51185e0e54e824fc672adc6f84c818cac5f0d89dbb8726cb559a6
+DIST HTML-Tree-5.03.tar.gz 147857 SHA256 7d6d73fca622aa74855a8b088faa39454a0f91b7af83c9ec0387f01eefc2148f SHA512 fc1c04c3958c51c23060fd74db7d519b70e19d67ca5bd22ac78414c9d592e88f344fbd6a824b80b0b2e99d1a1ad38df141ef8d7dd2703e6dd16c8dc948c31b5f WHIRLPOOL 03f348ef0ef7e5bc4928f9bc1d02b2408507d442d6ca56f41558e2e9bdbc8a88c8704cbd312d3028619b681f0e65c8586deec0f379cfc726690176306d7e9bb9
 EBUILD HTML-Tree-4.200.0.ebuild 718 SHA256 424b7f65161b8a75029259522c06664238f94927bee919d82a2c3dd7961ace74 SHA512 e204a82403fd9959156ddd209c8b228f1bfd6d47a788a0b1731df0bdd2af9df22aa57e76127153a63f5bed34beb52395068746cf4549f62eb06082fca8116063 WHIRLPOOL 009bf52f2a1ec2c09b39f7034654a6054737f68c432723bdc0c056e1f6166879fca5d88603d0478da96ba212eb7fe1dd734c275ef5217b4648b2efa9974abef6
 EBUILD HTML-Tree-5.20.0.ebuild 761 SHA256 fd5b6beb74c40d848c2671ebf8c469f17253d65d638b3f780e7a6540d247cb24 SHA512 f92c1b361edd7884306db0a9a9a7b978d5398cce494d9dce10ca0f8ab7e2d05b7d66de5fb48e0ae9a9d6eb964db47bc28de2f57fe5e3d8b21ecee3849d0aa2cc WHIRLPOOL e1d3843418e6419b17b9233110c6ca6130883f81c1bee45b23042e60ef0e992fa855b15c2a7f856f71df3c31e121b3c47c3c1030a08e2bebcc594ba45f6030aa
-MISC ChangeLog 7846 SHA256 d819d09b34d20189b164d697825fd2f595ee76fd7b133b01aec91718ac9bc8b9 SHA512 56382d04604903af0524eca2a1b8776c72b2e6a53f80d6dbc66facb1b03c15d5da5f79265efecbfed88217fee6352de9e8fe7fef8ba3ba26203523698ccdd1fd WHIRLPOOL 234f1ba1006449764b3849efc0743fb10b4952494108d0210930573de3866f7eb211a4ca58ffca6206fa1ee5d4a10c489c1e560f62647c96cee5c9d0dfe82091
+EBUILD HTML-Tree-5.30.0.ebuild 784 SHA256 1b5ee8a1984fe0e59175f4c119eef19051a4778d89ecdd087f4b2d20f024b6cc SHA512 e005729dd96fa03e76cdf1a89a6f8d8abbbb28372f9f9d6acb6619775f264b3cbf635755ba7e1fc63eabd80167c1aab4273936730ca5c4c61abc8747bcfc0d68 WHIRLPOOL 699c621319f8d4a927858215ef8599eafdd6b5a26d4088248abff274fa7216e8e4be149ad3aa2001479335ac3192be7609a63b19c2bb9b3fa9ddec7c8ff04eda
+MISC ChangeLog 7969 SHA256 089f2f215115c450075ce3e4466646e88b884c2c55c3fb6b7817d16a688d9f72 SHA512 4380fe3bb0e131760fe5a2ee8cdff63f962a6f1d2ad826d433ef39d254cbd9e8c4b10da7337958d6799cfacefce0d8f631d5e9e6df0ea2ed61ae40bbe0c05d84 WHIRLPOOL 7632826d42890381c60be01c9241da7f0750b54f631afc7c0bc68c9dceda495240acb1dfd7db75514bb03785893427969b97f2126f66909a5b6f98793bf36d4a
 MISC metadata.xml 603 SHA256 70ce6a05b429bf7365da36547a526e83befa3eab3665ce9170f4e423bb5acc41 SHA512 e0ea71867519952b92e873c78a9bed08aece224f8843a0c7f068f6b7a4de0635816b80b266e849090003ce90a2cd32bff89a5c6038e879741d8166f1ceaccf9d WHIRLPOOL 3b09f09219b7e8a4455c9beaacb8aa64751b47f8323d153ab72062bf16471dcbf06666b2c00a41271abf781de627bd8c0fe49532d0baa7a3b248d63316d6e22c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlBxoaIACgkQV3J2n04EauwTfACgvWEB/0PoCqpTR5WXE0mnl/N8
+JBwAnjQwAgJ04bNMulCrfMV2SMBOeNJd
+=pCkc
+-----END PGP SIGNATURE-----
