@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/HTML-Tree
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTML-Tree/ChangeLog,v 1.73 2012/06/28 19:16:52 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTML-Tree/ChangeLog,v 1.74 2012/10/07 15:37:05 tove Exp $
+
+*HTML-Tree-5.30.0 (07 Oct 2012)
+
+  07 Oct 2012; Torsten Veller <tove@gentoo.org> +HTML-Tree-5.30.0.ebuild:
+  Version bump
 
 *HTML-Tree-5.20.0 (28 Jun 2012)
 
